--- a/low_mach.tex
+++ b/low_mach.tex
@@ -934,7 +934,7 @@ where $U$ is the solution vector, $F$ is the conservative flux and $S$ is a sour
 %===================================================================================================
 \subsection{Spatial and Temporal Discretizations} \label{sec:disc}
 %===================================================================================================
-The system of equations given in \eqt{eq:form} is discretized using a continuous Galerkin finite element method and high-order temporal integrators available through the MOOSE framework \cite{ref MOOSE www.mooseframework.org}.
+The system of equations given in \eqt{eq:form} is discretized using a continuous Galerkin finite element method and high-order temporal integrators available through the MOOSE framework \cite{MOOSE}.
 %---------------------------------------------------------------------------------------------------
 \subsubsection{CFEM} 
 %---------------------------------------------------------------------------------------------------
@@ -1662,7 +1662,7 @@ The multi-D Euler equations with variable area are recalled here:
 \begin{array}{lll}
 \partial_t \left( \rho A \right) + \div \left( \rho \vec{u} A \right) = 0 \\
 \partial_t \left( \rho \vec{u} A \right) + \div \left[A\left( \rho \vec{u} \otimes \vec{u} + P \mathbf{I} \right) \right] = P \grad A \\
-\partial_t \left( \rho E \right) + \div \left[ \vec{u} \left( \rho E + P \right) \right] = 0
+\partial_t \left( \rho E A \right) + \div \left[ \vec{u} A \left( \rho E + P \right) \right] = 0
 \end{array}
 \right. \nonumber
 \end{equation}
@@ -1679,30 +1679,30 @@ The multi-D Euler equations with variable area with dissipative terms, yield:
 \begin{array}{lll}
 \partial_t \left( \rho A \right) + \div \left( \rho \vec{u} A \right) = \div f \\
 \partial_t \left( \rho \vec{u} A \right) + \div \left[A\left( \rho \vec{u} \otimes \vec{u} + P \mathbf{I} \right) \right] = P \grad A + \div g \\
-\partial_t \left( \rho E \right) + \div \left[ \vec{u} \left( \rho E + P \right) \right] = \div h
+\partial_t \left( \rho E A\right) + \div \left[ \vec{u} A \left( \rho E + P \right) \right] = \div h
 \end{array}
 \right. 
 \end{equation}
 where $f$, $g$ and $h$ are the dissipative terms to derive. Starting from the modified system of equations given in \eqt{app:euler_variable_A_diss}, the entropy residual is derived again:
 \begin{eqnarray}
 \label{eq:ent_res_app}
-A \rho \left( \partial_t s + \vec{u} \cdot \div s \right) &=& s_e \left[ \div h + g \grad u + \left( \frac{u^2}{2}-e \right) \div f \right] \nonumber\\
+A \rho \left( \partial_t s + \vec{u} \cdot \grad s \right) &=& s_e \left[ \div h + g : \grad u + \left( \frac{u^2}{2}-e \right) \div f \right] \nonumber\\
 &+& \rho s_{\rho} \div f
 \end{eqnarray}
 The next step consists of choosing a definition for each of the dissipative terms so that the left hand-side is proven positive. The right hand-side of \eqt{eq:ent_res_app} can be simplified using the following relations, $g = A \mu \grad^s \vec{u} + \vec{u} \otimes f$ and $h = \tilde{h} + \vec{u} \cdot g - 0.5 || \vec{u} ||^2 f$, which yields:
 \begin{eqnarray}
 \label{eq:ent_res_app2}
-A \rho \left( \partial_t s + \vec{u} \cdot \div s \right) &=& s_e \left[ \div \tilde{h}-e \div f \right] + \rho s_{\rho} \div f  + A s_e \mu \grad \vec{u}^s \grad \vec{u}\nonumber
+A \rho \left( \partial_t s + \vec{u} \cdot \div s \right) &=& s_e \left[ \div \tilde{h}-e \div f \right] + \rho s_{\rho} \div f  + A s_e \mu \grad \vec{u}^s : \grad \vec{u}\nonumber
 \end{eqnarray}
 The right hand-side is now integrated by parts:
 \begin{eqnarray}
 \label{eq:ent_res_app3}
 A \rho \left( \partial_t s + \vec{u} \cdot \div s \right) &=& \div \left[ s_e \tilde{h}-s_e e f  + \rho s_{\rho} f \right] -\nonumber \\
-\div \tilde{h} \grad s_e  &-& f \grad (e s_e) -  f \grad ( \rho s_{\rho} ) + A s_e \mu \grad \vec{u}^s \grad \vec{u} \nonumber
+\div \tilde{h} \grad s_e  &-& f \cdot \grad (e s_e) -  f \cdot \grad ( \rho s_{\rho} ) + A s_e \mu \grad^s \vec{u} : \grad \vec{u} \nonumber
 \end{eqnarray}
-where $\grad^s$ is the symmetric gradient. The term $A s_e \mu \grad \vec{u}^s \grad \vec{u}$ is positive and thus, does not need any further modification. It remains to treat the other terms of the right hand-side that we now call $rhs$:
+where $\grad^s$ is the symmetric gradient. The term $A s_e \mu \grad^s \vec{u} : \grad \vec{u}$ is positive and thus, does not need any further modification. It remains to treat the other terms of the right hand-side that we now call $rhs$:
 \begin{equation}
-rhs = \div \left[ s_e \tilde{h}-s_e e f  + \rho s_{\rho} f \right] - \tilde{h} \grad s_e  - f \grad (e s_e) - f \grad ( \rho s_{\rho} ) \nonumber
+rhs = \div \left[ s_e \tilde{h}-s_e e f  + \rho s_{\rho} f \right] - \tilde{h} \cdot \grad s_e  - f \cdot \grad (e s_e) - f \cdot \grad ( \rho s_{\rho} ) \nonumber
 \end{equation}
 The first term of $rhs$ is a conservative terms. By choosing carefully a definition for $\tilde{h}$ and $f$, the conservative term can be expressed as a function of the entropy $s$. It is also required to include the variable area in the choice of the dissipative terms so that when assuming constant area, the regular multi-D Euler equations are recovered. The following definitions for $\tilde{h}$ and $f$ are chosen:
 \begin{equation}
